# kip

./: LICENSE  README.md  format_lint_test.sh  mypy.sh  pyproject.toml
.github/workflows/: lint-and-test.yaml  test.yaml
kip/: cli.py  config.py  lib.py  main.py  models.py  services.py  storage.py
kip/base/: cli.py  lib.py  models.py  services.py  storage.py
kip/cli/: base_cli.py  t.py  user_input.py
kip/config/: __init__.py  base.py  cli.py  models.py  read_config.py  services.py  storage.py
kip/services/: add_command.py  command_file.py  config.py  get_command.py  list_commands.py  remove_command.py  run_command.py  search_command.py
kip/storage/: command_file.py
src/: command.py
src/cli/: base_cli.py  t.py
src/config/: base.py  read_config.py
src/services/: add_command.py  command_file.py  remove_command.py  run_command.py  search_command.py
tests/: conftest.py  strategies.py  test_command.py  test_models.py  test_services.py  test_storage.py
tests/e2e/: conftest.py  test_config.py
tests/e2e/base/: test_base_cli.py
tests/e2e/config/: test_config.py
tests/integration/: test_models.py  test_services.py  test_storage.py
tests/models/: test_command.py
tests/services/: test_add_command.py  test_command_file.py  test_remove_command.py  test_run_command.py  test_search_command.py
tests/unit/config/: test_services.py
