[tool.poetry]
name = "kip"
version = "0.1.0"
description = ""
authors = ["Dennis Rall <dennis.rall@web.de>"]

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^8.13.0"
typer = {extras = ["all"], version = "^0.6.1"}
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
hypothesis = "^6.47.5"
pytest-mock = "^3.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kip = "kip.cli:main"
