[tool.poetry]
name = "kip"
version = "0.1.0"
description = ""
authors = ["Dennis Rall <dennis.rall@web.de>"]

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^8.13.0"
typer = {extras = ["all"], version = "^0.6.1"}
PyYAML = "^6.0"
types-PyYAML = "^6.0.12"

[tool.poetry.group.lint.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.group.mypy.dependencies]
mypy = "^0.982"
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
hypothesis = "^6.56.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kip = "kip.cli:main"

[tool.mypy]
strict = true

[tool.isort]
profile = "black"